--- a/slackbook_user/templates/base/index.html
+++ b/slackbook_user/templates/base/index.html
@@ -9,6 +9,8 @@
       <div class="col">
         <h2 class="index-headline">Brows Topics</h2>
         {% include 'base/topics-index.html' %}
+        <br>
+        {% include 'base/browse-channel.html' %}
       </div>
 
       <div class="col-5 index-center">
