add allauth templates

--- a/slackbook_user/templates/base/account-index.html
+++ b/slackbook_user/templates/base/account-index.html
@@ -44,7 +44,9 @@
                     <div>
                         <div class="channel-content">
                             <h5>{{ comment.body }}</h5>
-                            test<h5>{{ comment.image }}</h5>test
+                            {% if comment.image %}
+                                <img class="post-image" src="{{ comment.image.url }}" alt="post-image">
+                            {% endif %}
                         </div>  
                     </div>
                     <a href="#"><i class="fas fa-user-friends"></i></a> {{ comment.channel.guests.count }} Members
