add recently acive users to index.html

--- a/slackbook_user/templates/base/index.html
+++ b/slackbook_user/templates/base/index.html
@@ -19,8 +19,9 @@
       </div>
 
       <div class="col">
-        <h2 class="index-headline">Brows Channels</h2>
-        {% include 'base/browse-channel.html' %}
+        <h2 class="index-headline">Avtive Users</h2>
+        
+        {% include 'base/recently-active-index.html' %}
       </div>
 
     </div>
