--- a/slackbook_user/templates/base/account-index.html
+++ b/slackbook_user/templates/base/account-index.html
@@ -15,6 +15,7 @@
         </div> -->
 
         <div>
+
             <!-- hallo
             {{request.user.username}} - {{comment.user.username}} - -->
             {% for comment in comments %}
@@ -24,15 +25,21 @@
                 <div class="channel-content"> 
                     <h4><a href="#">{{ comment.channel.title }}</a></h4>
 
-                    <!-- test{{comment.channel.host.account_logout.value}}test -->
+                    <!-- test{{comment.channel.host.online}}test -->
 
                     {% if comment.channel.host.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
-                        {% if comment.channel.host.is_authenticated %}
+                        <img class="user-image" src="/static/images/avatar.png" alt="logo">
+                        <!-- {% if comment.channel.host.online == 'False' %}
+                        <img class="user-image" src="{{ comment.channel.host.avatar.url }}" alt="logo">
+                        {% else %}
+                        <img class="user-logedout" src="{{ comment.channel.host.avatar.url }}" alt="logo">
+                        {% endif %}                  -->
+                    {% else %}
+                        <!-- {% if comment.channel.host.online == 'False' %}
                         <img class="user-image" src="/static/images/avatar.png" alt="logo">
                         {% else %}
                         <img class="user-logedout" src="/static/images/avatar.png" alt="logo">
-                        {% endif %}                 
-                    {% else %}
+                        {% endif %} -->
                         <img class="user-image" src="{{ comment.channel.host.avatar.url }}" alt="user-image">
                     {% endif %}
                     <h5><a href="#">@{{comment.channel.host.username}}</a></h5>
@@ -69,6 +76,8 @@
             <h4><a href="{% url 'channel' topic.id %} ">{{topic.title}}</a></h4>
             <img class="user-image" src="{{ topic.host.avatar.url }}" alt="user-image">
             <a href="{% url 'account' topic.host.id %}"><h5>@{{topic.host.username}}</h5></a><i class="fas fa-user"></i>
+            <br>
+            <!-- loggedIn: {{ topic.host.loggedin }} -->
             <br>
             {% if request.user == topic.host %}
                 <a href="{% url 'update-channel' topic.id %}">Edit</a>
