--- a/slackbook_user/templates/base/recently-active-index.html
+++ b/slackbook_user/templates/base/recently-active-index.html
@@ -1,7 +1,42 @@
 <div class="row justify-content-around">
     <div class="col-4 main-content">
         <div class="channel-content">
-            {% for comment in comments %}
+            {% for user in users %}
+                <div class="recent-comments">
+                    <div class="row">
+                        <div class="col-md-1">
+                            <i class="fas fa-user"></i>
+                        </div>
+                        <div class="col-md-10">
+                            <small><a href="#">@{{ user.username }}</a></small>
+                            <br>
+                            {% for comment in user.post_set.all %}
+                                {{comment.body}} - {{comment.created_on|timesince}}
+                                <br>
+                                answered to: {{comment.channel.title}}
+                                <br>
+                            {% endfor %}
+
+                                
+                            <!-- <h5>answered to: <a href="#">{{ comment.channel }}</a></h5> -->
+                        </div>
+                        <!-- <div class="col-md-1">
+                            {% if request.user == comment.user%}
+                                <a href="{% url 'delete-comment' comment.id %}">X</a>
+                            {% endif %}
+                        </div> -->
+                    <!-- </div>
+                    <div>
+                        <div class="row bg-secondary text-white message">
+                            <h5>{{ comment }}</h5>
+                        </div>
+                        
+                    </div> -->
+                </div>
+                <hr>
+            {% endfor %}
+
+            <!-- {% for comment in comments %}
                 <div class="recent-comments">
                     <div class="row">
                         <div class="col-md-1">
@@ -25,7 +60,7 @@
                     </div>
                 </div>
                 <hr>
-            {% endfor %}
+            {% endfor %} -->
         </div>
     </div>
 </div>
