--- a/slackbook_user/templates/base/index.html
+++ b/slackbook_user/templates/base/index.html
@@ -19,8 +19,7 @@
       </div>
 
       <div class="col">
-        <h2 class="index-headline">Avtive Users</h2>
-        
+        <h2 class="index-headline">Active Users</h2>
         {% include 'base/recently-active-index.html' %}
       </div>
 
