--- a/slackbook_user/templates/base/recently-active-index.html
+++ b/slackbook_user/templates/base/recently-active-index.html
@@ -1,39 +1,24 @@
 <div class="row justify-content-around">
     <div class="col-4 main-content">
-        <div class="channel-content">
+        <div>
             {% for user in users %}
-                <div class="recent-comments">
-                    <div class="row">
-                        <div class="col-md-1">
-                            <i class="fas fa-user"></i>
-                        </div>
-                        <div class="col-md-10">
-                            <small><a href="#">@{{ user.username }}</a></small>
+                <div>
+                    <div class="row channel-content">
+                        <div >
+                            <small><a href="{% url 'account' user.id %}">@{{ user.username }}</a></small>
                             <br>
                             {% for comment in user.post_set.all|slice:"1" %}
-                                {{ comment.body }} - {{ comment.created_on|timesince }}
+                                {{ comment.created_on|timesince }}
                                 <br>
-                                answered to: {{comment.channel.title}}
-                                <br>
+                                <div class="channel-content">
+                                {{ comment.body }}
+                                </div>
+                                in Channel: <a href="{% url 'channel' comment.channel.id  %}">{{comment.channel.title}}</a>
                             {% endfor %}
-
-                                
-                            <!-- <h5>answered to: <a href="#">{{ comment.channel }}</a></h5> -->
                         </div>
-                        <!-- <div class="col-md-1">
-                            {% if request.user == comment.user%}
-                                <a href="{% url 'delete-comment' comment.id %}">X</a>
-                            {% endif %}
-                        </div> -->
-                    <!-- </div>
-                    <div>
-                        <div class="row bg-secondary text-white message">
-                            <h5>{{ comment }}</h5>
-                        </div>
-                        
-                    </div> -->
-                </div>
-                <hr>
+                        <br>
+                    </div>
+                    <hr>
             {% endfor %}
 
             <!-- {% for comment in comments %}
