--- a/slackbook_user/templates/base/browse-channel.html
+++ b/slackbook_user/templates/base/browse-channel.html
@@ -17,9 +17,7 @@
             <span class="category-open"><small> - Category: <a href="#">{{ channel.topic.title }}</a></small></span>
         </div>
         <hr>
-        
-    
         {% endfor %}
-
+        <button class="btn btn-primary dropdown-toggle btn-outline-success button channel-content">more</button>
     </div>
 </div>
