--- a/slackbook_user/templates/base/account.html
+++ b/slackbook_user/templates/base/account.html
@@ -3,33 +3,63 @@
 {% block content %}
 
 <div class="row justify-content-around">
-    <div class="col-4">
+    <div class="col-6">
         <div class="main-content">
 
             <div>
-                <span>@ <i class="fas fa-user"></i> {{ user.username }}</span>
+                {% if user.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
+                        <img class="user-image" src="/static/images/avatar.png" alt="logo">
+                    {% else %}
+                        <img class="user-image" src="{{ user.avatar.url }}" alt="user-image">
+                    {% endif %}
+                    <br>
+                <span>{{ user.username }}</span>
             </div>
-            <h3>{{channel_count}} hosted Channels</h3> 
-            <div>         
-                <a href="{% url 'create-channel' %}">Create Channel</a>
-            <div>
-            <br> 
-        
-            {% for topic in channels %}
-            <div class="channel-content">
-                <h5><a href="{% url 'channel' topic.id %} ">{{topic.title}}</a></h5>
-                {% if request.user == topic.host %}
-                    <a href="{% url 'update-channel' topic.id %}">Edit</a>
-                    <a href="{% url 'delete-channel' topic.id %}">Delete</a>
-                {% endif %}
-                <br>
-                <div class="channel-content">{{topic.content}}</div>
-                <br>
-                <a href="#"><i class="fas fa-user-friends"></i></a> {{ topic.guests.count }} Members
-                <span class="category-open"><small>{{ topic.topic.title }}</small></span>
+
+            <div class="row justify-content-center">
+            <div class="col-6">
+                <h3>{{channel_count}} hosted Channels</h3>      
+                {% for topic in channels %}
+                <div class="channel-content">
+                    <h5><a href="{% url 'channel' topic.id %} ">{{topic.title}}</a></h5>
+                    {% if request.user == topic.host %}
+                        <a href="{% url 'create-channel' %}">Create Channel</a>
+                        <a href="{% url 'update-channel' topic.id %}">Edit</a>
+                        <a href="{% url 'delete-channel' topic.id %}">Delete</a>
+                    {% endif %}
+                    <br>
+                    <div class="channel-content">{{topic.content}}</div>
+                    <br>
+                    <a href="#"><i class="fas fa-user-friends"></i></a> {{ topic.guests.count }} Members
+                    <span class="category-open"><small>{{ topic.topic.title }}</small></span>
+                </div>
+                <hr>
+                {% endfor %}
             </div>
-            <hr>
-            {% endfor %}    
+
+            <div class="col-6">
+                <h3>{{joined_count}} joined Channels</h3>      
+                {% for comment in comments %}
+                    <h5><a href="#">@{{comment.channel.host.username}}</a></h5>
+                    <div>
+                        <small><a href="#">@{{ comment.user.username }}</a> - {{ comment.created_on|timesince }} ago</small>
+                    </div>               
+                    <div>
+                        <div class="channel-content">
+                            <h5>{{ comment.body }}</h5>
+                            {% if comment.image %}
+                                <img class="post-image" src="{{ comment.image.url }}" alt="post-image">
+                            {% endif %}
+                        </div>  
+                    </div>
+                    <a href="#"><i class="fas fa-user-friends"></i></a> {{ comment.channel.guests.count }} Members
+                    <span class="category-open"><small>{{ comment.channel.topic.title }}</small></span>
+                </div>  
+                <hr>      
+                {% endfor %}     
+            </div> 
+            </div>
+
         </div>
     </div>
 </div>
