--- a/slackbook_user/templates/base/account.html
+++ b/slackbook_user/templates/base/account.html
@@ -37,12 +37,17 @@
                     {% endfor %}
                 </div>
 
-                <div class="col-6">
+                <div class="col-6" style="margin-left: -10px;">
 
+                    <div>
+                        {% include 'base/create-personal-channel.html' %}
+                    </div>
                   
-
+                    <div>
                     <h3>Joined Channels</h3>     
-         
+                        
+                    
+
                     {% for comment in comments %}
                     {% if comment.channel.host.username != user.username %}
 
@@ -65,6 +70,7 @@
                         <hr> 
                     {% endif %}    
                     {% endfor %}        
+                    </div>
                 </div>  
             </div>  
         </div>
