add automatic title to Chat

--- a/slackbook_user/templates/base/create-personal-channel.html
+++ b/slackbook_user/templates/base/create-personal-channel.html
@@ -21,15 +21,13 @@
                 </div> -->
                     
     
-                    <div>
-                        {{ form.title }}
-                    </div>
+                   
                         
                     <div>
                         <label for="channel-description">Your Message:</label>
                         <br>
-                        {{ form.body }}
-                        {{ form.image }}
+                        <p>{{ form.body }}</p>
+                        <p>{{ form.image }}</p>
                     </div>
                     <br>
                     
