managed some kind of conversation in chat.html

--- a/slackbook_user/templates/base/account.html
+++ b/slackbook_user/templates/base/account.html
@@ -42,6 +42,10 @@
                     <div>
                         {% include 'base/create-personal-channel.html' %}
                     </div>
+
+                    <div>
+                        {% include 'base/chat.html' %}
+                    </div>
                   
                     <div>
                     <h3>Joined Channels</h3>     
