--- a/slackbook_user/templates/base/recently-active-index.html
+++ b/slackbook_user/templates/base/recently-active-index.html
@@ -13,7 +13,7 @@
                                 <div class="channel-content">
                                 {{ comment.body }}
                                 </div>
-                                in Channel: <a href="{% url 'channel' comment.channel.id  %}">{{comment.channel.title}}</a>
+                                in Channel: <a href="#">{{comment.channel.title}}</a>
                             {% endfor %}
                         </div>
                         <br>
