styled chat.html

--- a/slackbook_user/templates/base/chat.html
+++ b/slackbook_user/templates/base/chat.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% block content %}
+
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-4 main-channel-content">
@@ -11,16 +14,16 @@
             {% if post.chat %}
                 <div>
                     <small><a href="#">@{{ post.user.username }}</a> - {{ post.created_on|timesince }} ago</small>
-                    <p>Comment: {{ post.body }}</p>
-                    <br>
+                    <!-- <p>Comment: {{ post.body }}</p>
+                    <br> -->
                     {% if post.image %}
                         <img class="post-image" src="{{ post.image.url }}" alt="post-image">
                     {% else %}
-                        <p>Comment: {{ post.body }}</p>
+                        <p class="question">{{ post.body }}</p>
+                        <!-- <p class="answer">{{ post.body }}</p> -->
                     {% endif %}
-                    <br>
                     {% if request.user == post.user%}
-                        <a href="{% url 'delete-comment' post.id %}"><button>Delete Comment</button></a>
+                        <a  href="{% url 'delete-comment' post.id %}"><button class="btn btn-outline-success button">x</button></a>
                     {% endif %}
                     <hr>  
                 </div>
@@ -32,7 +35,7 @@
           <div class="post-form">
               <form action="" method="POST" enctype="multipart/form-data">
                   {% csrf_token %}
-                  <input type="text" placeholder="Place your Comment..." name="body">   
+                  <input class="comment-field" type="text" placeholder="Place your meassage..." name="body">   
               </form>
           </div>
           <hr>
@@ -57,3 +60,5 @@
     
   </div>
 </div>
+
+{% endblock %}
