--- a/slackbook_user/templates/base/account.html
+++ b/slackbook_user/templates/base/account.html
@@ -6,7 +6,7 @@
     <div class="col-6">
         <div class="main-content">
 
-            <div>
+            <div class="main-content-headline">
                 {% if user.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
                         <img class="user-image" src="/static/images/avatar.png" alt="logo">
                     {% else %}
@@ -14,6 +14,9 @@
                     {% endif %}
                     <br>
                 <span>{{ user.username }}</span>
+                {% if request.user == user %}
+                    <a href="#"><i class="fas fa-envelope"></i></a>
+                {% endif %}
             </div>
 
             <div class="row justify-content-center">
