--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,10 +95,12 @@
 }
 
 .main-content-headline{
-    background-color: darkgray;
+    background-color: rgb(57, 57, 57);
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    margin: -5px -5px 5px;
+    margin: -10px -10px 10px;
+    padding: 10px;
+    border: 1px solid darkcyan;
 }
 
 .main-channel-content{
