--- a/slackbook_user/templates/base/chat.html
+++ b/slackbook_user/templates/base/chat.html
@@ -1,13 +1,14 @@
-{% extends 'base.html' %}
-{% block content %}
+
 
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-4 main-channel-content">
 
         <div class="channel-content">
+            {% if 'chat' in request.path %}
             <label for="channel-description">Conversation:</label>
             <br>
+            {% endif %}
             {{ chat.body }} {{ chat.created_on|timesince }}
             <hr>
             {% for post in posts %}
@@ -34,8 +35,12 @@
           {% if request.user.is_authenticated %}
           <div class="post-form">
               <form action="" method="POST" enctype="multipart/form-data">
-                  {% csrf_token %}
-                  <input class="comment-field" type="text" placeholder="Place your meassage..." name="body">   
+                {% csrf_token %}
+                {% if 'chat' in request.path %}
+                <input class="comment-field" type="text" placeholder="Place your meassage..." name="body">
+                {% endif %}   
+                <button type="submit">send</button>
+                <!-- <input type="submit" value="Submit">  -->
               </form>
           </div>
           <hr>
@@ -61,4 +66,3 @@
   </div>
 </div>
 
-{% endblock %}
