--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,6 +103,15 @@
     border: 1px solid darkcyan;
 }
 
+.channel-headline{
+    background-color: rgb(57, 57, 57);
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    margin: -10px -5px 10px;
+    padding: 10px;
+    border: 1px solid darkcyan; 
+}
+
 .main-channel-content{
     background-color: darkcyan;
     border-radius: 10px;
